--- a/src/app/features/dashboard/picks-list/picks-list.component.html
+++ b/src/app/features/dashboard/picks-list/picks-list.component.html
@@ -21,7 +21,7 @@
             : 'red-pick-class'
           : 'pick-class'
       "
-      cols="10"
+      cols="11"
       rowHeight="3em"
       *ngFor="let pick of thursdayPicksSafe$ | async"
     >
@@ -41,7 +41,7 @@
         </div>
         <!-- <mat-grid-tile colspan="1">@ </mat-grid-tile> -->
       </mat-grid-tile>
-      <mat-grid-tile colspan="3">
+      <mat-grid-tile colspan="4">
         <div class="team-name">
           <div *ngIf="!pick.team.isOU(); else doOU">
             <div class="team-name">
@@ -77,7 +77,7 @@
 
     <mat-grid-list
       class="pick-list"
-      cols="10"
+      cols="11"
       rowHeight="3em"
       [ngClass]="
         pick.game.complete
@@ -108,7 +108,7 @@
         </div>
         <!-- <mat-grid-tile colspan="1">@ </mat-grid-tile> -->
       </mat-grid-tile>
-      <mat-grid-tile colspan="3">
+      <mat-grid-tile colspan="4">
         <div class="team-name">
           <div *ngIf="!pick.team.isOU(); else doOU">
             <div class="team-name">
@@ -136,7 +136,9 @@
     </mat-grid-list>
   </div>
 
-  <ng-template #noPicks><h3>No Picks!</h3></ng-template>
+  <ng-template #noPicks
+    ><div class="pick-count"><h3>No Picks!</h3></div></ng-template
+  >
 </div>
 
 <!-- -------------------------------------------------------------- -->
@@ -280,5 +282,7 @@
     </mat-grid-list>
   </div>
 
-  <ng-template #noPicks><h3>No Picks!</h3></ng-template>
+  <ng-template #noPicks
+    ><div class="pick-count"><h3>No Picks!</h3></div></ng-template
+  >
 </ng-template>
