--- a/src/app/features/dashboard/games-list/games-list.component.html
+++ b/src/app/features/dashboard/games-list/games-list.component.html
@@ -33,7 +33,7 @@
         </div></mat-grid-tile
       >
       <mat-grid-tile colspan="2"
-        ><div class="team-name">+{{ game.ou }}</div></mat-grid-tile
+        ><div class="team-img">+{{ game.ou }}</div></mat-grid-tile
       >
       <mat-grid-tile colspan="8"
         ><div class="game-status">{{ game.status() }}</div></mat-grid-tile
