--- a/src/app/features/dashboard/games-list/games-list.component.css
+++ b/src/app/features/dashboard/games-list/games-list.component.css
@@ -1,11 +1,5 @@
-mat-grid-list {
-  border-width: 1px 1px 0px 1px;
-  border-style: solid;
-  border-color: #1e1e1e;
-}
-
-.list-container {
-  border-width: 0px 0px 1px 0px;
+.mat-grid-tile {
+  border-width: 1px;
   border-style: solid;
   border-color: #1e1e1e;
   background-color: white;
@@ -25,9 +19,7 @@ mat-grid-list {
   font-weight: bold;
   width: 100%;
   height: 100%;
-  border-left: 1px;
-  border-style: solid;
-  border-color: #1e1e1e;
+
   padding-left: 3px;
 }
 
@@ -45,13 +37,13 @@ mat-grid-list {
 }
 
 .team-img {
+  font-weight: bold;
   padding-left: 5px;
   padding-right: 5px;
   max-height: 2em;
 }
 
 .team-img-mini {
-  padding-left: 5px;
   padding-right: 5px;
   max-height: .5em;
 }
