--- a/src/app/features/dashboard/picks-list/picks-list.component.css
+++ b/src/app/features/dashboard/picks-list/picks-list.component.css
@@ -13,10 +13,12 @@ mat-grid-list {
 }
 
 .red-pick-class {
+  background-color: white;
   color: red;
 }
 
 .green-pick-class {
+  background-color: white;
   color: green;
 }
 
